--- a/.github/workflows/_publish.yml
+++ b/.github/workflows/_publish.yml
@@ -27,9 +27,10 @@ jobs:
       - name: Install R
         uses: r-lib/actions/setup-r@v2
         with:
-          r-version: '4.2.0'
+          r-version: '4.3.3'
           use-public-rspm: true
       - run: install.packages("rmarkdown")
+      - run: install.packages("knitr")
 
       - name: Setup renv and install packages
         uses: r-lib/actions/setup-renv@v2
