--- a/.github/workflows/_publish.yml
+++ b/.github/workflows/_publish.yml
@@ -31,7 +31,7 @@ jobs:
           RENV_CONFIG_REPOS_OVERRIDE: https://packagemanager.rstudio.com/all/latest
 
       - name: Install rmarkdown package
-      - run: Rscript -e "install.packages('remotes'); remotes::install_cran('rmarkdown')"
+        run: Rscript -e "install.packages('remotes'); remotes::install_cran('rmarkdown')"
       
       - name: Install Python and Dependencies
         uses: actions/setup-python@v4
